Switch prow image bumper to update prod configs

--- a/tools/config-generator/templates/prow-staging/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow-staging/prow_plugins.yaml
@@ -80,6 +80,7 @@ label:
   - source/kafka
   - source/prometheus
 
+# Setting for the "config-updater" plugin
 config_updater:
   maps:
     [[.JobConfigPath]]:
