--- a/config/staging/prow/core/plugins.yaml
+++ b/config/staging/prow/core/plugins.yaml
@@ -68,6 +68,7 @@ label:
   - source/github
   - source/kafka
   - source/prometheus
+# Setting for the "config-updater" plugin
 config_updater:
   maps:
     config/prod/staging/jobs/*.yaml:
