--- a/tools/config-generator/templates/prow/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow/prow_plugins.yaml
@@ -80,7 +80,7 @@ label:
   - source/kafka
   - source/prometheus
 
-# Settings for the "config-updater" plugin
+# Settings for the "config-updater" plugin.
 config_updater:
   maps:
     [[.JobConfigPath]]:
