use runner.sh for the config-updater job

--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -282,8 +282,9 @@ postsubmits:
       - image: gcr.io/knative-tests/test-infra/prow-tests:stable
         imagePullPolicy: Always
         command:
-        - "make"
+        - runner.sh
         args:
+        - "make"
         - "-C"
         - "./config/prod"
         - "update-all"
