Configure dot release for net-istio 0.14

--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -873,6 +873,9 @@ periodics:
       dot-dev: true
     - dot-release: true
       dot-dev: true
+    - dot-release: true
+      dot-dev: true
+      release: "0.14"
     - auto-release: true
       dot-dev: true
 
