--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -296,6 +296,50 @@ periodics:
       secret:
         secretName: prow-updater-robot-ssh-key
         defaultMode: 0400
+- cron: "0 */2 * * *" # Every other hour
+  name: ci-knative-prow-jobs-syncer
+  agent: kubernetes
+  decorate: true
+  cluster: "build-knative"
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+    path_alias: knative.dev/test-infra
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - "go"
+      args:
+      - "run"
+      - "./tools/prow-jobs/syncer/."
+      - "--github-account=/etc/prow-auto-bumper-github-token/token"
+      - "--git-userid=knative-prow-updater-robot"
+      - "--git-username='Knative Prow Updater Robot'"
+      - "--git-email=knative-prow-updater-robot@google.com"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      - name: prow-auto-bumper-github-token
+        mountPath: /etc/prow-auto-bumper-github-token
+        readOnly: true
+      - name: prow-updater-robot-ssh-key
+        mountPath: /root/.ssh
+        readOnly: true
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
+    - name: prow-auto-bumper-github-token
+      secret:
+        secretName: prow-auto-bumper-github-token
+    - name: prow-updater-robot-ssh-key
+      secret:
+        secretName: prow-updater-robot-ssh-key
+        defaultMode: 0400
 
 postsubmits:
   knative/test-infra:
