--- a/config/prod/prow/cluster/400-crier.yaml
+++ b/config/prod/prow/cluster/400-crier.yaml
@@ -32,9 +32,10 @@ spec:
         image: gcr.io/k8s-prow/crier:v20200602-f3683752b8
         args:
         - --pubsub-workers=5 # Arbitrary number of multiplier
-        - --gcs-workers=1
+        - --blob-storage-workers=1
         - --gcs-credentials-file=/etc/service-account/service-account.json # TODO(chizhg): use workload identity
-        - --kubernetes-gcs-workers=1
+        - --kubernetes-blob-storage-workers=1
+        - --kubeconfig=/etc/kubeconfig/config
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
         - --github-token-path=/etc/github/oauth
@@ -42,6 +43,9 @@ spec:
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
         volumeMounts:
+        - mountPath: /etc/kubeconfig
+          name: kubeconfig
+          readOnly: true
         - name: config
           mountPath: /etc/config
           readOnly: true
@@ -67,3 +71,7 @@ spec:
       - name: service-account
         secret:
           secretName: service-account
+      - name: kubeconfig
+        secret:
+          defaultMode: 420
+          secretName: kubeconfig
