Fixing testgrid config, by the way add verify testgrid config make target

--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -1679,6 +1679,6 @@ dashboard_groups:
 - name: prow-tests
   dashboard_names:
   - "beta-prow-tests"
-- name: utilities
+- name: maintenance
   dashboard_names:
   - "utilities"
