--- a/tools/config-generator/templates/prow/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow/prow_plugins.yaml
@@ -90,6 +90,9 @@ config_updater:
       name: config
     [[.PluginConfigPath]]:
       name: plugins
+    label_sync/labels.yaml:
+      name: label-config
+      namespace: test-pods
 
 # Plugins enabled for each repo.
 
