--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -340,37 +340,6 @@ periodics:
       secret:
         secretName: prow-updater-robot-ssh-key
         defaultMode: 0400
-- cron: "17 * * * *"  # Every hour at 17 minutes past the hour
-  name: ci-test-infra-label-sync
-  decorate: true
-  spec:
-    containers:
-    - name: label-sync
-      image: gcr.io/k8s-prow/label_sync:v20200615-5d59425fc2
-      command:
-      - /app/label_sync/app.binary
-      args:
-      - --config=/etc/config/labels.yaml
-      - --confirm=true
-      - --orgs=knative-sandbox
-      - --token=/etc/github/oauth
-      - --endpoint=http://ghproxy.default.svc.cluster.local
-      - --endpoint=https://api.github.com
-      - --debug
-      volumeMounts:
-      - name: oauth
-        mountPath: /etc/github
-        readOnly: true
-      - name: config
-        mountPath: /etc/config
-        readOnly: true
-    volumes:
-    - name: oauth
-      secret:
-        secretName: oauth-token
-    - name: config
-      configMap:
-        name: label-config
 
 postsubmits:
   knative/test-infra:
@@ -445,3 +414,33 @@ postsubmits:
       - name: test-account
         secret:
           secretName: test-account
+  - name: post-knative-test-infra-label-sync
+    agent: kubernetes
+    decorate: true
+    path_alias: knative.dev/test-infra
+    max_concurrency: 1
+    run_if_changed: "^label_sync/labels.yaml$"
+    branches:
+    - "master"
+    spec:
+      containers:
+      - name: label-sync
+        image: gcr.io/k8s-prow/label_sync:v20200615-5d59425fc2
+        command:
+        - /app/label_sync/app.binary
+        args:
+        - --config=label_sync/labels.yaml
+        - --confirm=true
+        - --orgs=knative-sandbox,knative
+        - --token=/etc/github/oauth
+        - --endpoint=http://ghproxy.default.svc.cluster.local
+        - --endpoint=https://api.github.com
+        - --debug
+        volumeMounts:
+        - name: oauth
+          mountPath: /etc/github
+          readOnly: true
+      volumes:
+      - name: oauth
+        secret:
+          secretName: oauth-token
