Add trigger plugin for oss-test-infra

--- a/config/prod/prow/core/plugins.yaml
+++ b/config/prod/prow/core/plugins.yaml
@@ -157,6 +157,8 @@ plugins:
   - welcome
   - wip
   - yuks
+  GoogleCloudPlatform/oss-test-infra:
+  - trigger
   knative/test-infra:
   - config-updater
 external_plugins:
