--- a/tools/config-generator/templates/prow/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow/prow_plugins.yaml
@@ -152,6 +152,8 @@ plugins:
   - yuks
 [[end]]
 [[end]]
+  GoogleCloudPlatform/oss-test-infra:
+  - trigger
   [[.TestInfraRepo]]:
   - config-updater
 
