--- a/config/prod/prow/jobs/custom/peribolos.yaml
+++ b/config/prod/prow/jobs/custom/peribolos.yaml
@@ -21,8 +21,11 @@ postsubmits:
   - name: post-knative-sandbox-peribolos
     agent: kubernetes
     decorate: true
+    path_alias: knative.dev/community
     max_concurrency: 1
     run_if_changed: "^peribolos/knative-sandbox.yaml$"
+    branches:
+    - "master"
     spec:
       containers:
       - image: gcr.io/k8s-prow/peribolos:v20200512-5bf6c1ac3
@@ -30,7 +33,7 @@ postsubmits:
         - "/peribolos"
         args:
         - "--config-path=peribolos/knative-sandbox.yaml"
-        - "--github-endpoint=http://ghproxy"
+        - "--github-endpoint=http://ghproxy.default.svc.cluster.local"
         - "--github-endpoint=https://api.github.com"
         - "--github-token-path=/etc/github/oauth"
         - "--fix-org=true"
@@ -44,34 +47,3 @@ postsubmits:
       - name: oauth
         secret:
           secretName: oauth-token
-
-periodics:
-- interval: 24h
-  name: ci-knative-sandbox-peribolos
-  decorate: true
-  max_concurrency: 1
-  extra_refs:
-  - org: knative
-    repo: community
-    base_ref: master
-  spec:
-    containers:
-    - image: gcr.io/k8s-prow/peribolos:v20200512-5bf6c1ac3
-      command:
-      - "/peribolos"
-      args:
-      - "--config-path=peribolos/knative-sandbox.yaml"
-      - "--github-endpoint=http://ghproxy"
-      - "--github-endpoint=https://api.github.com"
-      - "--github-token-path=/etc/github/oauth"
-      - "--fix-org=true"
-      - "--fix-org-members=true"
-      - "--confirm=true"
-      volumeMounts:
-      - name: oauth
-        mountPath: /etc/github
-        readOnly: true
-    volumes:
-    - name: oauth
-      secret:
-        secretName: oauth-token
