--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -586,6 +586,28 @@ test_groups:
 - name: ci-knative-eventing-kafka-sandbox-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-sandbox-go-coverage
   short_text_metric: "coverage"
+- name: ci-knative-eventing-kafka-broker-sandbox-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-broker-sandbox-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-eventing-kafka-broker-sandbox-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-broker-sandbox-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-kafka-broker-sandbox-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-broker-sandbox-dot-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-kafka-broker-sandbox-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-broker-sandbox-auto-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-kafka-broker-sandbox-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-broker-sandbox-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-serving-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-continuous-beta-prow-tests
 - name: ci-knative-serving-0.12-continuous-beta-prow-tests
@@ -713,6 +735,11 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-kafka-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-kafka-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-kafka-go-coverage-beta-prow-tests
+  short_text_metric: "coverage"
+- name: ci-knative-sandbox-eventing-kafka-broker-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-kafka-broker-continuous-beta-prow-tests
+- name: ci-knative-sandbox-eventing-kafka-broker-go-coverage-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-kafka-broker-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
 - name: ci-knative-networking-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-networking-go-coverage-beta-prow-tests
@@ -1187,6 +1214,35 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-eventing-kafka-sandbox-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: eventing-kafka-broker
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-eventing-kafka-broker-sandbox-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-eventing-kafka-broker-sandbox-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: dot-release
+    test_group_name: ci-knative-eventing-kafka-broker-sandbox-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-eventing-kafka-broker-sandbox-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: coverage
+    test_group_name: ci-knative-eventing-kafka-broker-sandbox-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-0.12
   dashboard_tab:
   - name: serving-continuous
@@ -1631,6 +1687,12 @@ dashboards:
   - name: ci-knative-sandbox-eventing-kafka-go-coverage
     test_group_name: ci-knative-sandbox-eventing-kafka-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+  - name: ci-knative-sandbox-eventing-kafka-broker-continuous
+    test_group_name: ci-knative-sandbox-eventing-kafka-broker-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-sandbox-eventing-kafka-broker-go-coverage
+    test_group_name: ci-knative-sandbox-eventing-kafka-broker-go-coverage-beta-prow-tests
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
   - name: ci-knative-networking-go-coverage
     test_group_name: ci-knative-networking-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
@@ -1692,6 +1754,7 @@ dashboard_groups:
 - name: knative-sandbox
   dashboard_names:
   - "eventing-kafka"
+  - "eventing-kafka-broker"
 - name: prow-tests
   dashboard_names:
   - "beta-prow-tests"
